fix(vscode): Zoom collapse tabs
This commit fix a styling issue that forces the tabs header to
collapse when there is much zoom in VSCode

fix: https://github.com/KaotoIO/kaoto-next/issues/530

--- a/packages/ui/src/components/MetadataEditor/MetadataEditor.scss
+++ b/packages/ui/src/components/MetadataEditor/MetadataEditor.scss
@@ -4,9 +4,9 @@
 }
 
 .metadata-editor-modal-list-view {
-  width: 50vw;
+  width: 50%;
 }
 
 .metadata-editor-modal-details-view {
-  width: 50vw;
+  width: 50%;
 }
